--- a/faq.html
+++ b/faq.html
@@ -1,82 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ Page</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        .container {
-            padding: 20px;
-            margin-top: 60px; /* Adjusted for fixed header */
-        }
-
-        .faq-item {
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 15px;
-            margin-bottom: 10px;
-        }
-
-        .faq-question {
-            font-weight: bold;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
-
 <body>
-
-<header>
-    <button class="back-button" onclick="history.back()">&lt;</button>
-    <h1>Frequently Asked Questions</h1>
-    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-    <div class="menu-content" id="menuContent">
-        <a href="bar_landing_page.html">Home</a>
-        <a href="profile.html">Profile</a>
-        <a href="settings.html">Settings</a>
-        <a href="faq.html">FAQs</a>
-        <a href="mission.html">Mission</a>
+    <header>
+        <button class="back-button" onclick="history.back()">&lt;</button>
+        <h1>Frequently Asked Questions</h1>
+        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+        <div class="menu-content" id="menuContent">
+            <a href="bar_landing_page.html">Home</a>
+            <a href="profile.html">Profile</a>
+            <a href="settings.html">Settings</a>
+            <a href="faq.html">FAQs</a>
+            <a href="mission.html">Mission</a>
+        </div>
+    </header>
+    <div class="faq-container">
+        <div class="faq-item">
+            <div class="faq-question">What is this app about?</div>
+            <div class="faq-answer">This app provides opportunities for users to interact in-person at bars and clubs.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How can I create an account?</div>
+            <div class="faq-answer">To create an account, click on the Sign-Up button and fill in the required information.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How do I reset my password?</div>
+            <div class="faq-answer">To reset your password, go to the login page and click on "Forgot Password".</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How can I contact support?</div>
+            <div class="faq-answer">You can contact support by emailing us at support@example.com or calling 123-456-7890.</div>
+        </div>
     </div>
-</header>
-
-<div class="container">
-    <div class="faq-item">
-        <div class="faq-question">What is this app about?</div>
-        <div class="faq-answer">This app provides opportunities for users to interact in-person at bars and clubs.</div>
-    </div>
-    <div class="faq-item">
-        <div class="faq-question">How can I create an account?</div>
-        <div class="faq-answer">To create an account, click on the Sign-Up button and fill in the required information.</div>
-    </div>
-    <div class="faq-item">
-        <div class="faq-question">How do I reset my password?</div>
-        <div class="faq-answer">To reset your password, go to the login page and click on "Forgot Password".</div>
-    </div>
-    <div class="faq-item">
-        <div class="faq-question">How can I contact support?</div>
-        <div class="faq-answer">You can contact support by emailing us at support@example.com or calling 123-456-7890.</div>
-    </div>
-</div>
-
-<script>
-    function toggleMenu() {
-        const menuContent = document.getElementById('menuContent');
-        menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
-    }
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        function toggleMenu() {
+            const menuContent = document.getElementById('menuContent');
+            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
 </html>
