--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -4,111 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: rgb(255, 255, 255);
-            padding-top: 55px; /* To avoid content behind fixed header */
-        }
-        .login-container {
-            max-width: 400px;
-            margin: 100px auto;
-            margin-top: 0px;
-            padding: 20px;
-            background-color: orange;
-            padding-top: 40px;
-        }
-        .login-container img {
-            display: block;
-            margin: 0 auto 20px;
-        }
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-        header h1 {
-            font-size: 24px;
-            margin: 0;
-            flex-grow: 1;
-            text-align: center;
-        }
-        .menu-button {
-            background: none;
-            border: none;
-            color: white;
-            font-size: 24px;
-            cursor: pointer;
-        }
-        .menu-content {
-            display: none;
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background-color: #333;
-            width: 100px;
-        }
-        .menu-content a {
-            color: white;
-            text-decoration: none;
-            display: block;
-            padding: 10px 20px;
-        }
-        .menu-content a:hover {
-            background-color: #575757;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <h1>Login</h1>
-    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-    <div class="menu-content" id="menuContent">
-        <a href="faq.html">FAQs</a>
-        <a href="mission.html">Mission</a>
-    </div>
-</header>
-<div class="login-container">
-    <img src="Over_Drinks_Logo_No_Background 1.png" alt="Logo" width="200px">
-    <h2 class="text-center">Login</h2>
-    <form id="loginForm">
-        <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
+    <header>
+        <button class="back-button" onclick="history.back()">&lt;</button>
+        <h1>Login</h1>
+        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+        <div class="menu-content" id="menuContent">
+            <a href="bar_landing_page.html">Home</a>
+            <a href="profile.html">Profile</a>
+            <a href="settings.html">Settings</a>
+            <a href="faq.html">FAQs</a>
+            <a href="mission.html">Mission</a>
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">
+    </header>
+    <div class="login-container">
+        <img src="Logo.png" alt="Over Drinks Logo" class="logo">
+        <h2 class="text-center">Login</h2>
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn-custom">Login</button>
+        </form>
+        <div class="text-center mt-3">
+            <a href="create_profile.html">Create Account</a>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-    </form>
-    <div class="text-center mt-3">
-        <a href="create_profile.html">Create Account</a>
     </div>
-</div>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            window.location.href = 'profile.html';
+        });
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        window.location.href = 'bar_landing_page.html';
-    });
-    function toggleMenu() {
-        const menuContent = document.getElementById('menuContent');
-        menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
-    }
-</script>
+        function toggleMenu() {
+            const menuContent = document.getElementById('menuContent');
+            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
+        }
+    </script>
 </body>
 </html>
