--- a/profile.html
+++ b/profile.html
@@ -4,115 +4,368 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            background-image: url('background.jpeg'); /* Use the actual path to your image */
+            background-size: cover; /* Ensure the image covers the entire background */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Prevent the background image from repeating */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding-top: 60px; /* To avoid content behind fixed header */
+        }
+
+        .profile-container {
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.5); /* More transparent */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .card {
+            margin: 0 auto;
+        }
+
+        .profile-name-input {
+            margin-bottom: 16px;
+        }
+
+        .profile-card {
+            max-width: 400px;
+        }
+
+        .modal-footer {
+            display: flex;
+            justify-content: center;
+        }
+
+        #profile-pic {
+            width: 100px;
+            height: 100px;
+            border-radius: 6px;
+            margin: 12px auto;
+            display: block;
+        }
+
+        #video {
+            width: 100%;
+            background-color: black;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        header h1 {
+            font-size: 24px;
+            margin: 0;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+       .back-button, .menu-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+        .menu-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: #333;
+            width: 100px;
+        }
+
+        .menu-content a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 10px 20px;
+        }
+
+        .menu-content a:hover {
+            background-color: #575757;
+        }
+
+        .tag-container {
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 10px;
+        }
+
+        .tag {
+            background-color: #007bff;
+            color: white;
+            border-radius: 4px;
+            padding: 5px 10px;
+            margin: 5px;
+            cursor: pointer;
+        }
+
+        .tag.selected {
+            background-color: #0056b3;
+        }
+
+        .category {
+            width: 100%;
+            font-weight: bold;
+            margin-top: 10px;
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <button class="back-button" onclick="history.back()">&lt;</button>
-        <h1>Profile</h1>
-        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-        <div class="menu-content" id="menuContent">
-            <a href="bar_landing_page.html">Home</a>
-            <a href="profile.html">Profile</a>
-            <a href="settings.html">Settings</a>
-            <a href="faq.html">FAQs</a>
-            <a href="mission.html">Mission</a>
-        </div>
-    </header>
-    <div class="profile-container">
-        <h2 class="text-center">Profile</h2>
-        <form id="datingInfoForm">
-            <div class="profile-picture-container" role="button" tabindex="0" data-bs-toggle="modal" data-bs-target="#profilePicModal" id="profile-click">
-                <img id="profile-pic" src="profile.svg" class="profile-picture" />
-            </div>
-            <div class="form-group">
-                <label for="gender">Gender</label>
-                <select class="form-control" id="gender">
-                    <option>Male</option>
-                    <option>Female</option>
-                    <option>Other</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="age">Age</label>
-                <input type="number" class="form-control" id="age" placeholder="Enter age">
-            </div>
-            <div class="form-group">
-                <label for="interests">Interests</label>
-                <input type="text" class="form-control" id="interests" placeholder="Enter interests">
-            </div>
-            <button type="submit" class="btn-custom">Edit Profile</button>
-        </form>
+<header>
+    <button class="back-button" onclick="history.back()">&lt;</button>
+    <h1>Profile</h1>
+    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+    <div class="menu-content" id="menuContent">
+        <a href="faq.html">FAQs</a>
+        <a href="mission.html">Mission</a>
     </div>
-    <div class="modal fade" id="profilePicModal" tabindex="-1" aria-labelledby="profilePicModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="profilePicModalLabel">Change profile pic</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-capture-window"></button>
-                </div>
-                <div class="modal-body">
-                    <label for="profile-pic-file" class="form-label"> Say Cheese! </label>
-                    <video id="video" autoplay></video>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="capture-btn">Capture and Set Profile Pic</button>
-                </div>
+</header>
+<div class="profile-container">
+    <h2 class="text-center">Profile</h2>
+    <form id="datingInfoForm">
+        <div role="button" tabindex="0" data-bs-toggle="modal" data-bs-target="#profilePicModal" id="profile-click">
+            <img id="profile-pic" src="profile.svg" />
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter name">
+        </div>
+        <div class="form-group">
+            <label for="gender">Gender</label>
+            <select class="form-control" id="gender">
+                <option>Male</option>
+                <option>Female</option>
+                <option>Other</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="age">Age</label>
+            <input type="number" class="form-control" id="age" placeholder="Enter age">
+        </div>
+        <div class="form-group">
+            <label for="interests">Interests</label>
+            <div class="tag-container" id="tag-container">
+                <!-- Selected tags will be displayed here -->
+            </div>
+            <button type="button" class="btn btn-secondary mt-3" data-bs-toggle="modal" data-bs-target="#interestModal">Edit Interests</button>
+        </div>
+        <div class="form-group">
+            <label for="bio">Bio</label>
+            <input type="text" class="form-control" id="bio" placeholder="Enter bio">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Save Profile</button>
+    </form>
+</div>
+<div
+    class="modal fade"
+    id="profilePicModal"
+    tabindex="-1"
+    aria-labelledby="profilePicModalLabel"
+    aria-hidden="true"
+>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="profilePicModalLabel">Change profile pic</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-capture-window"></button>
+            </div>
+            <div class="modal-body">
+                <label for="profile-pic-file" class="form-label"> Say Cheese! </label>
+                <video id="video" autoplay></video>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="capture-btn">Capture and Set Profile Pic</button>
             </div>
         </div>
     </div>
-    <script>
-        var videostream;
-        window.onload = () => {
-            localStorage.setItem("currentWindow", "profile.html");
-            if (localStorage.getItem("photo")) {
-                document.getElementById("profile-pic").src = localStorage.getItem("photo");
-            }
-        };
+</div>
+<div
+    class="modal fade"
+    id="interestModal"
+    tabindex="-1"
+    aria-labelledby="interestModalLabel"
+    aria-hidden="true"
+>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="interestModalLabel">Edit Interests</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="tag-container" id="modal-tag-container">
+    <div class="category sports">Sports</div>
+    <div class="tag" data-value="Basketball">Basketball</div>
+    <div class="tag" data-value="Football">Football</div>
+    <div class="tag" data-value="Soccer">Soccer</div>
+    <div class="tag" data-value="Baseball">Baseball</div>
+    <div class="tag" data-value="Sports news">Sports news</div>
+    <div class="tag" data-value="Gymnastics">Gymnastics</div>
+    <div class="tag" data-value="Skateboarding">Skateboarding</div>
+    <div class="tag" data-value="Scootering">Scootering</div>
+    <div class="tag" data-value="MMA">MMA</div>
+    <div class="tag" data-value="Wrestling">Wrestling</div>
 
-        function toggleMenu() {
-            const menuContent = document.getElementById('menuContent');
-            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
-        }
+    <div class="category beauty">Beauty</div>
+    <div class="tag" data-value="Makeup artists">Makeup artists</div>
+    <div class="tag" data-value="Nails">Nails</div>
+    <div class="tag" data-value="Hair">Hair</div>
+    <div class="tag" data-value="Skin & body care">Skin & body care</div>
 
-        document.getElementById('datingInfoForm').addEventListener('submit', function(event) {
+    <div class="category personality">Personality</div>
+    <div class="tag" data-value="Extroverted">Extroverted</div>
+    <div class="tag" data-value="Quiet">Quiet</div>
+    <div class="tag" data-value="Gentle">Gentle</div>
+    <div class="tag" data-value="Rational">Rational</div>
+
+    <div class="category music">Music</div>
+    <div class="tag" data-value="Country">Country</div>
+    <div class="tag" data-value="Electronic">Electronic</div>
+    <div class="tag" data-value="Rock">Rock</div>
+    <div class="tag" data-value="Pop">Pop</div>
+
+    <div class="category pets">Pets</div>
+    <div class="tag" data-value="Cat">Cat</div>
+    <div class="tag" data-value="Dog">Dog</div>
+    <div class="tag" data-value="Insects">Insects</div>
+
+    <div class="category sexual_orientation">Sexual Orientation</div>
+    <div class="tag" data-value="Heterosexual">Heterosexual</div>
+    <div class="tag" data-value="Homosexual">Homosexual</div>
+    <div class="tag" data-value="Bisexual">Bisexual</div>
+    <div class="tag" data-value="Asexual">Asexual</div>
+    <div class="tag" data-value="Pansexual">Pansexual</div>
+    <div class="tag" data-value="Queer">Queer</div>
+</div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="save-tags">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const interests = JSON.parse(localStorage.getItem("interests")) || [];
+        updateSelectedTags(interests);
+
+        document.getElementById("datingInfoForm").addEventListener("submit", function(event) {
             event.preventDefault();
+            localStorage.setItem("name", document.getElementById("name").value);
+            localStorage.setItem("gender", document.getElementById("gender").value);
+            localStorage.setItem("age", document.getElementById("age").value);
+            localStorage.setItem("bio", document.getElementById("bio").value);
+
+            // Save selected interests
+            const selectedInterests = Array.from(document.querySelectorAll("#tag-container .tag.selected")).map(tag => tag.getAttribute("data-value"));
+            localStorage.setItem("interests", JSON.stringify(selectedInterests));
+
             window.location.href = 'bar_landing_page.html';
         });
+    });
 
-        document.getElementById("profile-click").addEventListener("click", openCaptureWindow);
+    document.getElementById("profile-click").addEventListener("click", openCaptureWindow);
 
-        function openCaptureWindow() {
-            navigator.mediaDevices.getUserMedia({audio: false, video: true}).then((stream) => {
-                video.srcObject = stream;
-                videostream = stream;
-            }).catch((err) => {
-                alert(err);
-            });
+    function openCaptureWindow() {
+        navigator.mediaDevices.getUserMedia({audio: false, video: true}).then((stream) => {
+            video.srcObject = stream;
+            videostream = stream;
+        }).catch((err) => {
+            alert(err);
+        });
+    }
+
+    document.getElementById("close-capture-window").addEventListener("click", closeCaptureWindow);
+
+    function closeCaptureWindow() {
+        videostream.getTracks()[0].stop();
+        videostream.stop();
+    }
+
+    document.getElementById("capture-btn").onclick = function () {
+        const canvas = document.createElement("canvas");
+        canvas.width = 512; 
+        canvas.height = 512;
+        canvas.getContext("2d").drawImage(document.getElementById("video"), 0, 0, 512, 512);
+        localStorage.setItem("photo", canvas.toDataURL("image/jpeg"));
+        document.getElementById("profile-pic").src = localStorage.getItem("photo");
+        document.getElementById("close-capture-window").click();
+    };
+
+    document.getElementById('tag-container').addEventListener('click', function(event) {
+        if (event.target.classList.contains('tag')) {
+            event.target.classList.toggle('selected');
         }
+    });
 
-        document.getElementById("close-capture-window").addEventListener("click", closeCaptureWindow);
-
-        function closeCaptureWindow() {
-            videostream.getTracks()[0].stop();
-            videostream.stop();
+    document.getElementById('modal-tag-container').addEventListener('click', function(event) {
+        if (event.target.classList.contains('tag')) {
+            event.target.classList.toggle('selected');
         }
+    });
 
-        document.getElementById("capture-btn").onclick = function () {
-            const canvas = document.createElement("canvas");
-            canvas.width = 512; 
-            canvas.height = 512;
-            canvas.getContext("2d").drawImage(document.getElementById("video"), 0, 0, 512, 512);
-            localStorage.setItem("photo", canvas.toDataURL("image/jpeg"));
-            document.getElementById("profile-pic").src = localStorage.getItem("photo");
-            document.getElementById("close-capture-window").click();
-        };
-    </script>
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    document.getElementById('save-tags').addEventListener('click', function() {
+        // Save selected interests
+        const selectedInterests = Array.from(document.querySelectorAll("#modal-tag-container .tag.selected")).map(tag => tag.getAttribute("data-value"));
+        localStorage.setItem("interests", JSON.stringify(selectedInterests));
+
+        // Update tags on main page
+        updateSelectedTags(selectedInterests);
+
+        // Close modal
+        document.querySelector("#interestModal .btn-close").click();
+    });
+
+    function updateSelectedTags(selectedInterests) {
+        const tagContainer = document.getElementById("tag-container");
+        tagContainer.innerHTML = ""; // Clear existing tags
+        selectedInterests.forEach(interest => {
+            const tag = document.createElement("div");
+            tag.className = "tag selected";
+            tag.setAttribute("data-value", interest);
+            tag.textContent = interest;
+            tagContainer.appendChild(tag);
+        });
+    }
+
+    function toggleMenu() {
+        const menuContent = document.getElementById("menuContent");
+        menuContent.style.display = menuContent.style.display === "block" ? "none" : "block";
+    }
+</script>
+<!-- Bootstrap JS and dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
